--- a/pom.xml
+++ b/pom.xml
@@ -15,9 +15,10 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.hamcrest</groupId>
-            <artifactId>hamcrest-all</artifactId>
-            <version>${hamcrest.version}</version>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <!-- use 2.9.0 for Java 7 projects -->
+            <version>3.9.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
